--- a/static/css/input.css
+++ b/static/css/input.css
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400..900;1,400..900&family=Architects+Daughter&display=swap');
 
-/* @import "tailwindcss" source(none); */
+@import "tailwindcss" source(none);
 
 @source '../../core/templates/**/*.html';
 @source '../../users/templates/**/*.html';
 @source '../../components/**/*.html';
-@source '../../components/**/*.js';q
+@source '../../components/**/*.js';
 
 
 
@@ -18,21 +18,43 @@
 }
 
 @layer components{
+
   .responsive-padding{
     @apply px-4 md:px-9 lg:px-20;
   }
   
 
-  @keyframes scroll {
-    0% { transform: translateX(0); }
-    100% { transform: translateX(-50%); } /* Moves only half for seamless effect */
+  @keyframes infinite-scroll {
+    from {
+      transform: translateX(0);
+    }
+    to {
+      transform: translateX(-100%);
+    }
   }
 
   .animate-scroll {
-    display: flex;
-    white-space: nowrap;
-    animation: scroll 15s linear infinite;
+      width: max-content;
+      display: flex;
+      white-space: nowrap;
+      animation: infinite-scroll 20s linear infinite;
+    }
+
+    /* Hide the clear button in Chrome, Edge, and Safari */
+    input[type="search"]::-webkit-search-cancel-button {
+      display: none;
+    }
+
+    /* Hide the clear button in Firefox */
+    input[type="search"]::-moz-search-clear-button {
+      display: none;
+    }
+
+    /* Hide the clear button in Microsoft Edge */
+    input[type="search"]::-ms-clear {
+      display: none;
+    }
+
   }
-}
 
 
