--- a/components/button/template.html
+++ b/components/button/template.html
@@ -5,7 +5,7 @@
         bg-red-600 text-white
     {% elif type == 'tertiary' %}
         rounded-lg shadow-[0px_4px_4px_0px_rgba(0,0,0,0.25)] bg-white 
-    {% endif %}">
+    {% endif %} {{ extraclass }}">
 
     {{ label }}
 </{{tag|escape}}>
