--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -14,28 +14,17 @@
 </head>
 <body class='font-base text-gray-900'>
 
-    <!-- <header class="w-full flex flex-row justify-between mb-6">
-        <div class="logo">
-            <img src="{% static 'images/eaglespoint-logo.png' %}" width="72px">
-        </div>
-        <div>
-            <input type="search" placeholder="Search Location or Properties">
-        </div>
-        <div><i class="fa fa-bars"></i></div>
-        <nav>
-
-        </nav>
-    </header> -->
+    <div></div>
     <header x-data="{ isOpen:false }" class="w-full bg-white border-gray-200 responsive-padding py-2.5 sticky top-0 z-30 drop-shadow-md">
         <div class="relative flex  gap-6 items-center justify-center mx-auto">
             
             <!-- Logo Section -->
             <a href="#" class="block">
-                <img src="{% static 'images/eaglespoint-logo.png' %}" width="72px" class="w-32" alt="EaglesPoint Logo" />
+                <img src="{% static 'images/eaglespoint-logo.png' %}" width="72px" class="w-18 md:w-32" alt="EaglesPoint Logo" />
             </a>
     
             <!-- Search Bar -->
-            <div class="flex items-stretch w-full h-10 border rounded-lg focus:ring-2 focus:ring-blue-500 hover:border-blue-500 transition">
+            <div class="flex items-stretch w-full h-10 border border-gray-50 bg-slate-200/100 rounded-lg focus:ring-2 focus:ring-blue-500 hover:border-blue-500 transition">
                 <input type="search" class="block w-full px-4 py-2 focus:outline-none" 
                        placeholder="Search Location or Properties">
                 <button class="bg-blue-600 text-white h-full p-2 rounded-r-lg"><i class="fa fa-search fa-lg"></i></button>
@@ -45,20 +34,30 @@
             <button @click="isOpen = !isOpen" type="button" class="inline-flex items-center p-2 text-sm 
                 text-gray-500 rounded-lg ml-auto lg:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200">
                 <span class="sr-only">Open main menu</span>
-                <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path>
-                </svg>
+                <!-- <i class="fa fa-hamburger w-6 h-6" :class="isOpen ? 'fa-close' : 'fa fa-hamburger'"></i> -->
+                <template x-if="!isOpen">
+                    <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path>
+                    </svg>
+                </template>
+                <template x-if="isOpen">
+                    <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20">
+                        <path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path>
+                    </svg>
+                </template>
             </button>
     
             <!-- Navigation Menu -->
-            <nav :class="isOpen ? 'flex' : 'hidden'" class="absolute w-screen top-20 z-50 bg-white lg:relative lg:top-0 flex-col justify-between items-start md:w-full lg:ml-auto lg:w-max lg:flex lg:items-center *:font-semibold lg:font-normal" id="mobile-menu">
-                <ul class="flex flex-col mt-4 font-medium w-full md:w-full lg:w-max lg:flex-row lg:space-x-8 lg:mt-0">
+            <nav x-cloak :class="isOpen ? 'flex' : 'hidden'" class="absolute p-2 lg:p-0 w-screen top-18 z-50 bg-white lg:relative lg:top-0 flex-col justify-between items-start md:w-full lg:ml-auto lg:w-max lg:flex lg:items-center *:font-semibold lg:font-normal" id="mobile-menu">
+                <ul class="flex flex-col lg:items-center mt-4 font-medium w-full md:w-full lg:w-max lg:flex-row lg:space-x-8 lg:mt-0">
                     <li><a href="#" class="block text-gray-700 pl-2 py-2 lg:p-0 hover:bg-gray-100 lg:hover:bg-transparent lg:hover:underline">Home</a></li>
-                    <li><a href="#" class="block text-gray-700 pl-2 py-2 lg:p-0 hover:bg-gray-100 lg:hover:bg-transparent lg:hover:underline">Company</a></li>
-                    <li><a href="#" class="block text-gray-700 pl-2 py-2 lg:p-0 hover:bg-gray-100 lg:hover:bg-transparent lg:hover:underline">Marketplace</a></li>
-                    <li><a href="#" class="block text-gray-700 pl-2 py-2 lg:p-0 hover:bg-gray-100 lg:hover:bg-transparent lg:hover:underline">Features</a></li>
-                    <li><a href="#" class="block text-gray-700 pl-2 py-2 lg:p-0 hover:bg-gray-100 lg:hover:bg-transparent lg:hover:underline">Team</a></li>
+                    <li><a href="#" class="block text-gray-700 pl-2 py-2 lg:p-0 hover:bg-gray-100 lg:hover:bg-transparent lg:hover:underline">Travel</a></li>
+                    <li><a href="#" class="block text-gray-700 pl-2 py-2 lg:p-0 hover:bg-gray-100 lg:hover:bg-transparent lg:hover:underline">Blogs</a></li>
+                    <li><a href="#" class="block text-gray-700 pl-2 py-2 lg:p-0 hover:bg-gray-100 lg:hover:bg-transparent lg:hover:underline">About Us</a></li>
                     <li><a href="#" class="block text-gray-700 pl-2 py-2 lg:p-0 hover:bg-gray-100 lg:hover:bg-transparent lg:hover:underline">Contact</a></li>
+                    <li>
+                        {% component "button" label="Sign Up/Login" type="primary" extraclass="w-full" %} {% endcomponent %}
+                    </li>
                 </ul>
             </nav>
         </div>
@@ -103,11 +102,12 @@
             <ul class="mt-2 space-y-2 *:font-medium *:text-gray-700">
                 <li><span class="font-bold">Telephone: </span><a class="hover:text-blue-600" href="tel:+2348165704879">+2348165704879</a></li>
                 <li><span class="font-bold">Email: </span><a class="hover:text-blue-600" href="mailto:eaglespointglobal@gmail.com">eaglespointglobal@gmail.com</a></li>
+                <li><span class="font-bold">Address: </span>No 5, Rumuwegwu, Igwuruta Road. Eneka first market, Port-Harcout, Rivers State</li>
             </ul>
         </div>
 
         <div>
-            <p class="text-gray-700">&copy; <span x-data x-text="new Date().getFullYear()">2025</span> Eaglespoint Horizon Limited. All right reserved. </p>
+            <p class="text-gray-700">&copy; <span x-data x-text="new Date().getFullYear()">2025</span> Eaglespoint Horizon Limited. All rights reserved. </p>
         </div>
         {% block script %}{% endblock %}
 
