--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -99,11 +99,11 @@
         </div>
     </section>
 
-    <div class="flex flex-col gap-6 lg:gap-9">
+    <div class="flex flex-col gap-7 lg:gap-9">
         <section class="bg-slate-100 flex flex-col gap-3 lg:flex-row lg:justify-between lg:items-center">
             <div class="responsive-padding lg:p-0 lg:w-1/2 lg:pl-20">
                 <h3 class="text-4xl font-extrabold mb-3"><span class="text-red-600 font-cursive">Unlock</span> Your Global Academic Dream</h3>
-                <p class="text-xl">Are you a scholar seeking to explore new horizons, meet new people, and achieve academic excellence abroad? Look no further! At Eaglespoint Horizon Limited, we specialize in simplifying the study abroad process, ensuring a seamless and enjoyable experience for you.
+                <p>Are you a scholar seeking to explore new horizons, meet new people, and achieve academic excellence abroad? Look no further! At Eaglespoint Horizon Limited, we specialize in simplifying the study abroad process, ensuring a seamless and enjoyable experience for you.
                 </p>
             </div>
             <img src="{% static 'images/happy-graduand.jpeg' %}" class="w-full lg:max-w-96 h-auto max-h-64 lg:h-full object-cover">
@@ -112,7 +112,7 @@
         <section class="flex flex-col gap-3 lg:flex-row-reverse lg:justify-between lg:items-center">
             <div class="responsive-padding lg:p-0 lg:w-1/2 lg:pr-20">
                 <h3 class="text-4xl font-extrabold mb-3 pr-20"><span class="text-red-600 font-cursive">Worry-less</span> about SAT, TOEFL, IELTS</h3>
-                <p class="text-xl">Our team of experienced and professional tutors will coach and prepare you to achieve excellent results and higher scores. With higher scores, you'll increase your chances of securing a scholarship!</p>
+                <p>Our team of experienced and professional tutors will coach and prepare you to achieve excellent results and higher scores. With higher scores, you'll increase your chances of securing a scholarship!</p>
             </div>
             <img src="{% static 'images/man-2562325_1280.jpg' %}" class="w-full lg:max-w-96 h-auto max-h-64 object-cover">
         </section>
@@ -120,7 +120,7 @@
         <section class="bg-slate-100 flex flex-col gap-3 lg:flex-row lg:justify-between lg:items-center">
             <div class="responsive-padding lg:p-0 lg:w-1/2 lg:pl-20">
                 <h3 class="text-4xl font-extrabold mb-3"><span class="text-red-600 font-cursive">Enjoy</span> Flexible Learning Options</h3>
-                <p class="text-xl">Our services cater to both schools and individuals. For schools, we'll send a team of capable teachers to instruct students within their primary learning environment, ensuring a seamless integration with curricular activities. Individuals can join us at our conducive learning environment or opt for online courses, eliminating physical barriers.
+                <p>Our services cater to both schools and individuals. For schools, we'll send a team of capable teachers to instruct students within their primary learning environment, ensuring a seamless integration with curricular activities. Individuals can join us at our conducive learning environment or opt for online courses, eliminating physical barriers.
                 </p>
             </div>
             <img src="{% static 'images/co-learning.jpg' %}" class="w-full lg:max-w-96 h-auto max-h-64 lg:h-full object-cover">
@@ -132,7 +132,7 @@
         <div class="absolute inset-0"></div>
         <!-- content -->
         <div class="relative z-10 flex flex-col gap-7 items-center">
-            <h3 class="text-4xl font-semibold">Listen to our Trusted Clients <span class="text-red-600">&hearts;</span></h3>
+            <h3 class="text-4xl font-semibold">Listen to our Trusted Clients <span class="text-red-600 fa fa-heart"></span></h3>
             <div class="card-container flex flex-col md:flex-row md:flex-wrap justify-center gap-6 *:bg-white *:text-gray-700 *:py-6 *:px-4 *:w-full *:md:w-72 *:rounded-xl *:shadow-[0px_4px_4px_0px_rgba(0,0,0,0.25)] *:inline-flex *:flex-col *:items-start *:gap-4 *:overflow-hidden">
                 <div class="card">
                     <img src="{% static 'images/quote-svgrepo-com.svg' %}" width="20px" class="w-14 h-14">
@@ -173,7 +173,7 @@
 
     </section>
 
-    <section class="responsive-padding flex flex-col gap-7">
+    <section class="responsive-padding flex flex-col gap-7 ">
         <h2 class="text-4xl font-semibold">Stay Informed with Our Blog</h2>
         <div class="flex flex-row flex-wrap gap-6 items-center justify-center">
             {% component "blog_card" title="The Ultimate Guide to Stress-Free Travel Planning" tag="Travel" imageUrl="{% static 'images/aiplane-window.jpeg' %}" excerpt="Traveling can be overwhelming, but with the right planning, it becomes an exciting experience. This blog will cover essential travel hacks, packing tips, and how to find the best flight deals." %} {% endcomponent %}
@@ -181,7 +181,6 @@
             {% component "blog_card" title="The Ultimate Guide to Stress-Free Travel Planning" tag="Travel" imageUrl="{% static 'images/aiplane-window.jpeg' %}" excerpt="Traveling can be overwhelming, but with the right planning, it becomes an exciting experience. This blog will cover essential travel hacks, packing tips, and how to find the best flight deals." %} {% endcomponent %}
 
             {% component "blog_card" title="The Ultimate Guide to Stress-Free Travel Planning" tag="Travel" imageUrl="{% static 'images/aiplane-window.jpeg' %}" excerpt="Traveling can be overwhelming, but with the right planning, it becomes an exciting experience. This blog will cover essential travel hacks, packing tips, and how to find the best flight deals." %} {% endcomponent %}
-            <!-- {% component "button" label="Start your Journey" type="primary" %} {% endcomponent %} -->
             
              
         </div>
